--- a/.github/workflows/auto-deploy-plesk.yml
+++ b/.github/workflows/auto-deploy-plesk.yml
@@ -7,11 +7,28 @@ on:
       - '**.md'
       - '.github/**'
       - 'docs/**'
+  workflow_dispatch:
 
 jobs:
+  check-secrets:
+    name: 🔍 Check Deployment Configuration
+    runs-on: ubuntu-latest
+    outputs:
+      has-secrets: ${{ steps.check.outputs.has-secrets }}
+    steps:
+      - id: check
+        run: |
+          if [ "${{ secrets.PLESK_HOST }}" != "" ] && [ "${{ secrets.PLESK_USER }}" != "" ]; then
+            echo "has-secrets=true" >> $GITHUB_OUTPUT
+          else
+            echo "has-secrets=false" >> $GITHUB_OUTPUT
+          fi
+
   deploy-to-plesk:
     name: 🚀 Deploy to Plesk Hosting
     runs-on: ubuntu-latest
+    needs: check-secrets
+    if: needs.check-secrets.outputs.has-secrets == 'true'
     
     environment:
       name: plesk-production
@@ -140,3 +157,71 @@ jobs:
         echo "🌐 Live at: https://your-domain.com"
         echo "📊 Commit: ${{ github.sha }}"
         echo "🔄 Workflow: #${{ github.run_number }}"
+
+  deployment-ready:
+    name: 📦 Build Ready (Plesk Secrets Not Configured)
+    runs-on: ubuntu-latest
+    needs: check-secrets
+    if: needs.check-secrets.outputs.has-secrets == 'false'
+    
+    steps:
+    - name: 📥 Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: 🟢 Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        
+    - name: 📦 Install Dependencies
+      run: npm ci
+      
+    - name: 🏗️ Build Production Site
+      run: npm run build
+      
+    - name: ✅ Deployment Package Ready
+      run: |
+        echo "🎉 Production build completed successfully!"
+        echo "📦 Plesk deployment package is ready!"
+        echo ""
+        echo "🔧 To enable automatic Plesk deployment:"
+        echo "   1. Go to Settings > Secrets and variables > Actions"
+        echo "   2. Add these secrets:"
+        echo "      - PLESK_HOST=your-plesk-server.com"
+        echo "      - PLESK_USER=your-plesk-username"
+        echo "      - PLESK_SSH_KEY=your-ssh-private-key"
+        echo "      - PLESK_WEB_DIR=httpdocs (optional)"
+        echo "      - PLESK_PORT=22 (optional)"
+        echo ""
+        echo "📂 Manual deployment option:"
+        echo "   - Download the dist/ folder"
+        echo "   - Upload to your Plesk hosting via File Manager"
+        echo "   - Or use the deploy-plesk.sh script manually"
+        
+    - name: 📤 Upload Deployment Package
+      uses: actions/upload-artifact@v4
+      with:
+        name: plesk-deployment-package
+        path: |
+          dist/
+          deploy-plesk.sh
+          package.json
+        retention-days: 7
+        
+    - name: 📊 Deployment Summary
+      run: |
+        echo "## 🎉 Plesk Deployment Package Ready!" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### ✅ What's Built:" >> $GITHUB_STEP_SUMMARY
+        echo "- 🏗️ Production build completed" >> $GITHUB_STEP_SUMMARY
+        echo "- 📦 All assets optimized for Plesk" >> $GITHUB_STEP_SUMMARY
+        echo "- 🚀 Ready for manual or automated deployment" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 🔧 Next Steps:" >> $GITHUB_STEP_SUMMARY
+        echo "1. **Manual Deployment**: Download artifacts and upload to Plesk" >> $GITHUB_STEP_SUMMARY
+        echo "2. **Auto Deployment**: Configure Plesk secrets for automatic deployment" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 📦 Available Files:" >> $GITHUB_STEP_SUMMARY
+        echo "- Complete website in dist/ folder" >> $GITHUB_STEP_SUMMARY
+        echo "- Plesk deployment script included" >> $GITHUB_STEP_SUMMARY
