--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "type": "git",
     "url": "https://github.com/username/kishans-kraft.git"
   },
-  "homepage": "https://your-domain.com",
+  "homepage": "https://kishanskraft.com/",
   "bugs": {
     "url": "https://github.com/username/kishans-kraft/issues"
   }
