--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aazgit/24.git"
+    "url": "https://github.com/aazgit/kishanskraft.com.git"
   },
   "homepage": "https://kishanskraft.com",
   "bugs": {
-    "url": "https://github.com/aazgit/24/issues"
+    "url": "https://github.com/aazgit/kishanskraft.com/issues"
   },
   "funding": {
     "type": "individual",
